--- a/image/icomoon/demo-external-svg.html
+++ b/image/icomoon/demo-external-svg.html
@@ -17,17 +17,7 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon email-modal"><use xlink:href="symbol-defs.svg#email-modal"></use></svg><span class="name"> email-modal</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon person-modal"><use xlink:href="symbol-defs.svg#person-modal"></use></svg><span class="name"> person-modal</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon phone-modal"><use xlink:href="symbol-defs.svg#phone-modal"></use></svg><span class="name"> phone-modal</span>
+                <svg class="icon telegram-icon"><use xlink:href="symbol-defs.svg#telegram-icon"></use></svg><span class="name"> telegram-icon</span>
             </div>
         </div>
   </div>
