--- a/portfolio.html
+++ b/portfolio.html
@@ -411,6 +411,29 @@
             </li>
           </ul>
         </div>
+        <div class="container-footer-form">
+          <form class="footer-form">
+            <p class="subscription-title">Подпишитесь на рассылку</p>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="form-email"
+              placeholder="E-mail"
+            />
+            <a
+              class="btn-subscription"
+              href="https://web.telegram.org/"
+              target="_blank"
+              rel="noreferrer noopener"
+              aria-label="Share to Linkedin"
+            >
+              Подписаться<svg class="subscription-icon" width="24" height="24">
+                <use href="./image/sprite.svg#telegram-icon"></use>
+              </svg>
+            </a>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
