--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <p class="subscription-title">Подпишитесь на рассылку</p>
             <input type="email" name="email" id="email" class="form-email" placeholder="E-mail">
              <a
-              class="btn-subscription"
+              class="btn-subscription-link"
               href="https://web.telegram.org/"
               target="_blank"
               rel="noreferrer noopener"
