--- a/portfolio.html
+++ b/portfolio.html
@@ -426,7 +426,7 @@
               href="https://web.telegram.org/"
               target="_blank"
               rel="noreferrer noopener"
-              aria-label="Share to Linkedin"
+              aria-label="Telegram"
             >
               Подписаться<svg class="subscription-icon" width="24" height="24">
                 <use href="./image/sprite.svg#telegram-icon"></use>
