сделал бордер при фокусе

--- a/portfolio.html
+++ b/portfolio.html
@@ -422,7 +422,7 @@
               placeholder="E-mail"
             />
             <a
-              class="btn-subscription"
+              class="btn-subscription-link"
               href="https://web.telegram.org/"
               target="_blank"
               rel="noreferrer noopener"
